<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_todolist">

        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardViewStyle"
            android:id="@+id/cvAddTaskCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/green_task"
            app:cardElevation="@dimen/elevation_card_home"
            app:strokeWidth="@dimen/stroke_width_card_home">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTile"
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_task_category_title"
                    android:layout_marginStart="@dimen/general_margin_left"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextBody"
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin_left"
                    android:text="@string/add_task_category_title_description"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/asdeporte"
                    android:scaleType="centerInside"
                    android:layout_margin="@dimen/general_margin_left"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvAddTaskCategory"
            app:layout_constraintBottom_toTopOf="@+id/addTask"
            >
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextTile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task_category_title_name"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiNameTask"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin_top"
                android:hint="@string/add_task_category_hint_title_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right"
            android:layout_marginBottom="@dimen/general_margin_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>